[package]
name = "abc106"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc106-a = { alias = "a", problem = "https://atcoder.jp/contests/abc106/tasks/abc106_a" }
abc106-b = { alias = "b", problem = "https://atcoder.jp/contests/abc106/tasks/abc106_b" }
abc106-c = { alias = "c", problem = "https://atcoder.jp/contests/abc106/tasks/abc106_c" }
abc106-d = { alias = "d", problem = "https://atcoder.jp/contests/abc106/tasks/abc106_d" }

[[bin]]
name = "abc106-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc106-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc106-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc106-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
